# subscribe_job_rss

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
modules/: __init__.py  bot.py  constants.py  db.py  parser.py
modules/bot/: __init__.py  bot.py
modules/cli/: __init__.py  cli.py
modules/constants/: __init__.py  constants.py
modules/db/: __init__.py  db.py
modules/log/: __init__.py  log.py
modules/parser/: __init__.py  parser.py
modules/templates/: __init__.py  templates.py
modules/utils/: __init__.py  utils.py
templates/: jobs.html  rss_params_message.html
