[project]
name = "selectjob"
version = "0.1.0"
description = "Tool to subscribe hh.ru vacancies with specified filters"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "click>=8.3.3",
    "jinja2>=3.1.6",
    "python-telegram-bot>=22.7",
    "requests>=2.33.1",
    "tabulate>=0.10.0",
]

[project.scripts]
selectjob = "modules.cli.cli:cli"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["modules.cli", "modules.db", "modules.log", "modules.bot", "modules.parser", "modules.utils"]
