[project]
name = "subjob"
version = "0.1.0"
description = "Tool to subscribe hh.ru vacancies with specified filters"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "click>=8.3.3",
    "jinja2>=3.1.6",
    "python-dotenv>=1.2.2",
    "python-telegram-bot[job-queue]>=22.7",
    "requests>=2.33.1",
    "tabulate>=0.10.0",
]

[project.scripts]
subjob = "modules.cli.cli:cli"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "modules",
    "modules.constants",
    "modules.bot",
    "modules.cli",
    "modules.db",
    "modules.log",
    "modules.parser",
    "modules.utils",
    "modules.templates",
]
